--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 .body {
     width: calc(100% - 20px);
-    background-color: #81A263;
+    background-color: #6390a261;
     height: calc(100% - 100px);
     padding: 10px;
 }
