--- a/src/app/prompted/prompted.component.scss
+++ b/src/app/prompted/prompted.component.scss
@@ -5,6 +5,6 @@
     width: auto;
     color: white;
     border-radius: 10px;
-    background-color: #294B29;
+    background-color: #32445e;
     padding: 10px;
 }
