--- a/src/app/response/response.component.scss
+++ b/src/app/response/response.component.scss
@@ -5,7 +5,7 @@
     width: auto;
     color: white;
     border-radius: 10px;
-    background-color: #365E32;
+    background-color: #32445e;
     padding: 10px;
 }
 
