--- a/src/app/final-review/final-review.component.html
+++ b/src/app/final-review/final-review.component.html
@@ -11,27 +11,21 @@
             <span>{{employeeName}}</span>
         </div>
         <div class="tools">
-            <button style="margin-right: 20px; border-radius: 15px;" matSuffix>
+            <button style="margin-right: 20px; border-radius: 15px;" matSuffix (click)="saveReview()">
                 <mat-icon style="color: black; border: white;">print</mat-icon>
             </button>
-            <button style="margin-right: 20px; border-radius: 15px;" matSuffix>
-                <mat-icon>brush</mat-icon>
-            </button>
-            <button (click)="changeLockStatus(doc_locked)" *ngIf="doc_locked.value" style="margin-right: 20px; border-radius: 15px;" matSuffix>
-                <mat-icon>lock</mat-icon>
-            </button>
-            <button (click)="changeLockStatus(doc_locked)" *ngIf="!doc_locked.value" style="margin-right: 20px; border-radius: 15px;" matSuffix>
-                <mat-icon>lock_open</mat-icon>
+            <button (click)="compareReview()" style="margin-right: 20px; border-radius: 15px;" matSuffix>
+                <mat-icon>done</mat-icon>
             </button>
         </div>
         <div class="review-section">
             <div class="skill">
                 <div class="description">
-                    <span style="font-size: 25px; color: yellowgreen">Programming skills</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Programming skills</span><br>
                     <span>Command of programming knowledge and skills to perform assigned tasks effectively.</span>
                 </div>
                 <div class="scale">
-                    <span style="font-size: 25px; color: yellowgreen">Scale</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Scale</span><br>
                     <mat-radio-group aria-label="Select an option" class="white-radio-button" [formControl]="programmingSkillsScale">
                         <mat-radio-button value="5"><span style="color: white">5</span></mat-radio-button>
                         <mat-radio-button value="4"><span style="color: white">4</span></mat-radio-button>
@@ -41,13 +35,10 @@
                     </mat-radio-group>
                 </div>
                 <div class="comments">
-                    <span style="font-size: 25px; color: yellowgreen">Comments</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Comments</span><br>
                     <textarea rows="5" class="comments-text-Area" matInput placeholder="Enter Here" [formControl]="programmingSkillsComments" cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1" cdkAutosizeMaxRows="5"></textarea>
                 </div>
                 <div class="skill-tools">
-                    <button style="margin-right: 20px; border-radius: 15px;margin-top: 10px" matSuffix>
-                        <mat-icon>brush</mat-icon>
-                    </button>
                     <button (click)="changeLockStatus(programmingSkillsLocked)" *ngIf="programmingSkillsLocked.value" style="margin-right: 20px; border-radius: 15px; margin-top: 10px" matSuffix>
                         <mat-icon>lock</mat-icon>
                     </button>
@@ -58,11 +49,11 @@
             </div>
             <div class="skill">
                 <div class="description">
-                    <span style="font-size: 25px; color: yellowgreen">Sense of responsibility</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Sense of responsibility</span><br>
                     <span>Command of programming knowledge and skills to perform assigned tasks effectively.</span>
                 </div>
                 <div class="scale">
-                    <span style="font-size: 25px; color: yellowgreen">Scale</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Scale</span><br>
                     <mat-radio-group aria-label="Select an option" class="white-radio-button" [formControl]="senseOfResponsibilityScale">
                         <mat-radio-button value="5"><span style="color: white">5</span></mat-radio-button>
                         <mat-radio-button value="4"><span style="color: white">4</span></mat-radio-button>
@@ -72,31 +63,25 @@
                     </mat-radio-group>
                 </div>
                 <div class="comments">
-                    <span style="font-size: 25px; color: yellowgreen">Comments</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Comments</span><br>
                     <textarea rows="5" class="comments-text-Area" matInput placeholder="Enter Here" [formControl]="senseOfResponsibilityComments" cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1" cdkAutosizeMaxRows="5"></textarea>
                 </div>
                 <div class="skill-tools">
-                    <button style="margin-right: 20px; border-radius: 15px;margin-top: 10px" matSuffix>
-                        <mat-icon>brush</mat-icon>
-                    </button>
                     <button (click)="changeLockStatus(senseOfResponsibilityLocked)" *ngIf="senseOfResponsibilityLocked.value" style="margin-right: 20px; border-radius: 15px; margin-top: 10px" matSuffix>
                         <mat-icon>lock</mat-icon>
                     </button>
                     <button (click)="changeLockStatus(senseOfResponsibilityLocked)" *ngIf="!senseOfResponsibilityLocked.value" style="margin-right: 20px; border-radius: 15px; margin-top: 10px" matSuffix>
                         <mat-icon>lock_open</mat-icon>
                     </button>
-                    <button (click)="changeLockStatus(senseOfResponsibilityLocked)" *ngIf="!senseOfResponsibilityLocked.value" style="margin-right: 20px; border-radius: 15px; margin-top: 10px; color: rgb(255, 225, 0); background-color: transparent; border-color: transparent" matSuffix>
-                        <mat-icon>info</mat-icon>
-                    </button>
                 </div>
             </div>
             <div class="skill">
                 <div class="description">
-                    <span style="font-size: 25px; color: yellowgreen">Teamwork</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Teamwork</span><br>
                     <span>Command of programming knowledge and skills to perform assigned tasks effectively.</span>
                 </div>
                 <div class="scale">
-                    <span style="font-size: 25px; color: yellowgreen">Scale</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Scale</span><br>
                     <mat-radio-group aria-label="Select an option" class="white-radio-button" [formControl]="teamworkScale">
                         <mat-radio-button value="5"><span style="color: white">5</span></mat-radio-button>
                         <mat-radio-button value="4"><span style="color: white">4</span></mat-radio-button>
@@ -106,13 +91,10 @@
                     </mat-radio-group>
                 </div>
                 <div class="comments">
-                    <span style="font-size: 25px; color: yellowgreen">Comments</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Comments</span><br>
                     <textarea rows="5" class="comments-text-Area" matInput placeholder="Enter Here" [formControl]="teamworkComments" cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1" cdkAutosizeMaxRows="5"></textarea>
                 </div>
                 <div class="skill-tools">
-                    <button style="margin-right: 20px; border-radius: 15px;margin-top: 10px" matSuffix>
-                        <mat-icon>brush</mat-icon>
-                    </button>
                     <button (click)="changeLockStatus(teamworkLocked)" *ngIf="teamworkLocked.value" style="margin-right: 20px; border-radius: 15px; margin-top: 10px" matSuffix>
                         <mat-icon>lock</mat-icon>
                     </button>
@@ -123,11 +105,11 @@
             </div>
             <div class="skill">
                 <div class="description">
-                    <span style="font-size: 25px; color: yellowgreen">Self Learning</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Self Learning</span><br>
                     <span>Ability to independently acquire and apply new knowledge and skills.</span>
                 </div>
                 <div class="scale">
-                    <span style="font-size: 25px; color: yellowgreen">Scale</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Scale</span><br>
                     <mat-radio-group aria-label="Select an option" class="white-radio-button" [formControl]="selfLearningScale">
                         <mat-radio-button value="5"><span style="color: white">5</span></mat-radio-button>
                         <mat-radio-button value="4"><span style="color: white">4</span></mat-radio-button>
@@ -137,13 +119,10 @@
                     </mat-radio-group>
                 </div>
                 <div class="comments">
-                    <span style="font-size: 25px; color: yellowgreen">Comments</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Comments</span><br>
                     <textarea rows="5" class="comments-text-Area" matInput placeholder="Enter Here" [formControl]="selfLearningComments" cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1" cdkAutosizeMaxRows="5"></textarea>
                 </div>
                 <div class="skill-tools">
-                    <button style="margin-right: 20px; border-radius: 15px;margin-top: 10px" matSuffix>
-                        <mat-icon>brush</mat-icon>
-                    </button>
                     <button (click)="changeLockStatus(selfLearningLocked)" *ngIf="selfLearningLocked.value" style="margin-right: 20px; border-radius: 15px; margin-top: 10px" matSuffix>
                         <mat-icon>lock</mat-icon>
                     </button>
@@ -154,11 +133,11 @@
             </div>
             <div class="skill">
                 <div class="description">
-                    <span style="font-size: 25px; color: yellowgreen">Professional Appearance</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Professional Appearance</span><br>
                     <span>Maintaining a professional appearance and demeanor at work.</span>
                 </div>
                 <div class="scale">
-                    <span style="font-size: 25px; color: yellowgreen">Scale</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Scale</span><br>
                     <mat-radio-group aria-label="Select an option" class="white-radio-button" [formControl]="professionalAppearanceScale">
                         <mat-radio-button value="5"><span style="color: white">5</span></mat-radio-button>
                         <mat-radio-button value="4"><span style="color: white">4</span></mat-radio-button>
@@ -168,13 +147,10 @@
                     </mat-radio-group>
                 </div>
                 <div class="comments">
-                    <span style="font-size: 25px; color: yellowgreen">Comments</span><br>
+                    <span style="font-size: 25px; color: rgb(50, 151, 205)">Comments</span><br>
                     <textarea rows="5" class="comments-text-Area" matInput placeholder="Enter Here" [formControl]="professionalAppearanceComments" cdkTextareaAutosize #autosize="cdkTextareaAutosize" cdkAutosizeMinRows="1" cdkAutosizeMaxRows="5"></textarea>
                 </div>
                 <div class="skill-tools">
-                    <button style="margin-right: 20px; border-radius: 15px;margin-top: 10px" matSuffix>
-                        <mat-icon>brush</mat-icon>
-                    </button>
                     <button (click)="changeLockStatus(professionalAppearanceLocked)" *ngIf="professionalAppearanceLocked.value" style="margin-right: 20px; border-radius: 15px; margin-top: 10px" matSuffix>
                         <mat-icon>lock</mat-icon>
                     </button>
