--- a/src/app/final-review/final-review.component.scss
+++ b/src/app/final-review/final-review.component.scss
@@ -27,7 +27,7 @@
 
 .review-card {
     width: 70%;
-    background-color: #365E32;
+    background-color: #32445e;
     border-radius: 10px;
     color: white;
     padding: 20px;
@@ -44,7 +44,7 @@
 
 .tools {
     margin-top: 10px;
-    background-color: #4F6F52;
+    background-color: #32445e;
     border-radius: 10px;
     padding: 10px;
 }
@@ -123,10 +123,10 @@
 .comments-text-Area {
     width: 100%;
     border-radius: 10px !important;
-    color: white;
+    color: black;
     padding-left: 5px;
     padding-top: 5px;
-    background-color: transparent;
+    background-color: white;
     border: 2px solid white;
     margin-top:10px;
 }
