--- a/src/app/web-header/web-header.component.scss
+++ b/src/app/web-header/web-header.component.scss
@@ -1,6 +1,6 @@
 .header-container {
     height: 80px;
-    background-color: #365E32;
+    background-color: #32445e;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     width: 100%;
     z-index: 1000;
@@ -53,5 +53,5 @@
 }
 
 :host ::ng-deep .mat-mdc-form-field-type-mat-select:not(.mat-form-field-disabled) .mat-mdc-text-field-wrapper {
-    background-color: #BACD92;
+    background-color: white;
 }
